--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
+    "@types/ws": "^8.5.10",
     "prisma": "^5.9.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/websocket": "^8.3.1",
     "@prisma/client": "5.9.1",
     "fastify": "^4.26.0",
+    "ioredis": "^5.3.2",
     "zod": "^3.22.4"
   }
 }
